WebKit2/WebProcess/WebCoreSupport/qt/WebErrorsQt.cpp
@@ -26,6 +26,7 @@
 
 #include "WebErrors.h"
 
+#include "NotImplemented.h"
 #include <WebCore/ResourceRequest.h>
 #include <WebCore/ResourceResponse.h>
 
@@ -83,6 +84,12 @@ ResourceError fileDoesNotExistError(const ResourceResponse& response)
 {
     return ResourceError("QtNetwork", QNetworkReply::ContentNotFoundError, response.url().string(),
                          QCoreApplication::translate("QWebFrame", "File does not exist", 0, QCoreApplication::UnicodeUTF8));
+}
+
+ResourceError pluginWillHandleLoadError(const ResourceResponse&)
+{
+    notImplemented();
+    return ResourceError();
 }
 
 } // namespace WebKit
