WebKit2/WebProcess/WebCoreSupport/win/WebErrorsWin.cpp
@@ -72,4 +72,9 @@ ResourceError fileDoesNotExistError(const ResourceResponse& response)
     return ResourceError();
 }
 
+ResourceError pluginWillHandleLoadError(const ResourceResponse& response)
+{
+    return ResourceError(WebError::webKitErrorDomain(), kWKErrorCodePlugInWillHandleLoad, response.url().string(), String());
+}
+
 } // namespace WebKit
